# cat-retrieval

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
docs/: README.md  api_contracts.txt  data-and-privacy.md  functional-requirements.md  mvp-roadmap.md  product-brief.md  self-grilled-decisions.md  user-flows.md  user_stories.txt  wise-frontend-reference.md
migrations/: 202606280001_create_users_and_sessions.sql
scripts/: init_db.sh
src/: app.rs  lib.rs  main.rs
src/app/: mod.rs  routes.rs
src/app/authentication/: routes.rs
src/app/authentication/dto/: mod.rs  user.rs
src/app/authentication/routes/: login.rs  me.rs  register.rs
src/infrastructure/: database.rs
src/modules/authorization/dto/: role.rs
src/modules/user/: dto.rs
tests/: authentication.rs  health_check.rs
