[package]
name = "hound"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hound"

[dependencies]
actix-web = "4.13.0"
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"]}
config = "0.15.24"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
bcrypt = "0.16.0"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]


[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.145"